eglibc (2.9-15) unstable; urgency=low

  * kfreebsd/local-sysdeps.diff: update to revision 2597 (from glibc-bsd).
    Update expected testsuite results accordingly.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 13 Jun 2009 21:33:04 +0200

eglibc (2.9-14) unstable; urgency=low

  [ Aurelien Jarno ]
  * debian/debhelper.in/locales.postrm: remove /etc/default/locale on
    purge.  Closes: #530902.

  [ Clint Adams ]
  * Move /emul/ia32-linux libraries to /usr/lib32.

 -- Clint Adams <schizo@debian.org>  Sat, 13 Jun 2009 09:51:12 -0400

eglibc (2.9-13) unstable; urgency=low

  * debian/debhelper.in/nscd.init: fix return code when querying status
    and nscd is not running to comply with LSB.  Closes: #527883.
  * debian/debhelper.in/locales.config: don't use "echo -e".  Closes: 
    #527945, #529173.
  * debian/patches/localedata/supported.diff: add kk_KZ.RK1048 locale.
    Closes: #528177.
  * debian/debhelper.in/locales.config: use previous debconf settings if
    /etc/environment and /etc/default/locale do not exist.
  * debian/bug/locales/presubj: fix a typo.  Closes: #528353.
  * debian/local/manpages/validlocale.8: fix a typo.  Closes: #528658. 
  * debian/patches/any/cvs-sunrpc-license.diff: new patch from upstream
    to change the SUNRPC license into BSD one. Update debian/copyright
    accordingly.  Closes: #382175.
  * debian/patches/any/submitted-tst-cpucount.diff: new patch to fix 
    tst-cpucount test on non Linux kernels.
  * kfreebsd/local-sysdeps.diff: update to revision 2545 (from glibc-bsd).
  * debian/patches/kfreebsd/local-config_h_in.patch: new patch to correctly
    define __KFREEBSD_KERNEL_VERSION.
  * debian/sysdeps/kfreebsd.mk: bump minimal kernel version to 6.0.
  * debian/debhelper.in/libc.NEWS: detail the exact line that has to be
    added to /etc/resolv.conf.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 26 May 2009 13:45:58 +0200

eglibc (2.9-12) unstable; urgency=low

  [ Petr Salinger ]