@@ -1,3 +1,8 @@
+2009-06-11  Ulrich Drepper  <drepper@redhat.com>
+
+	* resolv/res_send.c (send_dg): Remember we switched to
+	single-request mode.
+
 2009-04-16  Ulrich Drepper  <drepper@redhat.com>
 
 	* resolv/res_send.c (send_dg): Don't just ignore the result we got
@@ -47,7 +52,7 @@ index f75a26e..25a854f 100644
  		seconds /= statp->nscount;
  	if (seconds <= 0)
  		seconds = 1;
-+	bool single_request = ((statp->options) & RES_SNGLKUP) != 0;// XXX
++	bool single_request = (statp->options & RES_SNGLKUP) != 0;// XXX
 +	int save_gotsomewhere = *gotsomewhere;
 + retry:
  	evNowTime(&now);
@@ -74,6 +79,7 @@ index f75a26e..25a854f 100644
 +		       have received the first answer.  */
 +		    if (!single_request)
 +		      {
++			statp->options |= RES_SNGLKUP;
 +			single_request = true;
 +			*gotsomewhere = save_gotsomewhere;
 +			goto retry;
