@@ -2,6 +2,7 @@ eglibc (2.9-15) unstable; urgency=low
 
   * kfreebsd/local-sysdeps.diff: update to revision 2597 (from glibc-bsd).
     Update expected testsuite results accordingly.
+  * any/cvs-broken-dns.diff: backport more parts from upstream.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 13 Jun 2009 21:33:04 +0200
 
